---------------------------------------------------------------------------------------------------
Version: 2.0.9
  Bugfixes:
    - Fixed missing events for structures built on space platforms
---------------------------------------------------------------------------------------------------
Version: 2.0.8
  Bugfixes:
    - Fixed debug information for power poles not being locked behind debug setting
    - Fixed crash from encountering recipes with no results
---------------------------------------------------------------------------------------------------
Version: 2.0.7
  Bugfixes:
    - Fixed stone, coal, and crude oil being locked behind off-planet science packs when using "Nauvis has Only Tiberium" setting
    - Fixed Tiberium Node Harvest and AOE Tiberium Node Harvester using the wrong animations
    - Fixed not being able to add Blue Tiberium to filters prior to researching Blue Tiberium Mutation
    - Slightly improved performance of SRF
    - Fixed Omnicompression crashes
    - Fixed missing names on prototypes that were only viewable through Factoriopedia
  Changes:
    - Allow deconstruction planners to remove Blossom Trees prior to unlocking cliff exlposives
  Features:
    - Power now propagates across connected SRF Emitters, so you only need to connect electric poles to one emitter per continuous wall (Thank you luan for sharing https://mods.factorio.com/mod/power-propagation)
---------------------------------------------------------------------------------------------------
Version: 2.0.6
  Bugfixes:
    - Fixed progression in Tiberium Only mode being blocked by not being Crude Oil and Uranium Ore not being minable but for real this time
    - Fixed Tiber Rocks incorrectly appearing on Nauvis on modes other than Tiberium-only
    - Fixed player taking damage while flying over Tiberium Ore in a cargo pod
    - Fixed Growth Accelerator disappearing while working
    - Fixed list of valid inputs for Tiberium Reprocessor being blank