@@ -2,6 +2,7 @@
 Version: 2.0.9
   Bugfixes:
     - Fixed missing events for structures built on space platforms
+    - Fixed Tiberium having lossless recycling recipes
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.8
   Bugfixes:
